fix(console): code editor line wrap (#3634)

--- a/packages/console/src/components/CodeEditor/index.module.scss
+++ b/packages/console/src/components/CodeEditor/index.module.scss
@@ -48,7 +48,7 @@
       font-size: 14px;
       line-height: 1.5;
       font-family: 'Roboto Mono', monospace;
-      white-space: nowrap;
+      white-space: pre;
       word-break: normal;
       position: absolute;
       inset: 0;
